* fixed bug in Jack plugin, which cause program crash when Jack server is 
  not running (Yuriy Zhuravlev)
* added pkgconfig support for building

Version 0.1
* added jump to file dialog (Vladimir Kuznetsov)
* added about dialog (Vladimir Kuznetsov)
* added russian translation
* added installation support
* added cmake support(experimental)
* added default skin
* improved settings dialog
* fixed "accertion failed" bug
* fixed hotkeys in playlist menu
* added english readme (Vladimir Kuznetsov)
* fixed showing bitrate over 999 kbps
* added Winamp EQF import
* added rest time show (Vladimir Kuznetsov)
* fixed time indicator blinking (Vladimir Kuznetsov)
* fixed "segmentation failed" with some buggy skins (Vladimir Kuznetsov)
* fixed parsing some skins

Version 0.1.1
* fixed ffmpeg plugin build
* fixed playlist file types (Vladimir Kuznetsov)
* fixed zero duration bug in mad plugin
* fixed codepage in about dialog
* fixed bug in cmake build scripts, which cause conflict in translation resources

Version 0.1.2
* fixed "segmentation failed" in remaining time mode (Vladimir Kuznetsov)
* fixed "segmentation failed" when resume playback with empty playlist
* fixed settings saving in tray mode
* added hotkeys in playlist (Up, Down, Alt- and Shift- modifiers) (Vladimir Kuznetsov)
* added broken files skiping (Vladimir Kuznetsov)
* added Turkish translation (Mustafa GUNAY)
* added custom close action (Vladimir Kuznetsov)
* fixed and improved cmake scripts
* fixed "Delete" hotkey in Russian translation

Version 0.1.3
* added Chinese Simplified translation (l on)
* added Ukrainian translation (Gennadi Motsyo)
* added codings fix for command line (Vladimir Kuznetsov)
* fixed next song selection after deletion selected (Vladimir Kuznetsov)
* fixed zero duration bug in mpc, flac, vorbis plugins
* fixed some non-critcical bugs in Ogg Vorbis plugin
* added Shift+N hotkey for all windows
* set using UTF-8 by default in mad plugin
* fixed russian translation in the flac plugin