@@ -102,3 +102,5 @@ Version 0.1.3
 * added Shift+N hotkey for all windows
 * set using UTF-8 by default in mad plugin
 * fixed russian translation in the flac plugin
+* added current song position navigation with Left/Right cursor buttons
+* added main menu popup on main display
